--- a/Public/styles/User_Association/login.css
+++ b/Public/styles/User_Association/login.css
@@ -8,7 +8,7 @@
 }
 body{
     height: 100vh;
-    background: linear-gradient(165deg, #ee913a, #3a83d5);
+    background: linear-gradient(165deg, #fff, #032e5f);
 }
 .background{
     width: 430px;
